# 5Minds.CodingDojo

./: .gitignore  ChangeRetum.sln  PangramChecker.sln  README.md
ChangeRetum/: ChangeCalculator.vb  ChangeRetum.vbproj  Program.vb
ChangeRetum/My Project/: launchSettings.json
ChangeReturn.Tests/: ChanceTests.vb  ChangeReturn.Tests.vbproj
Palindrome/: .classpath  .project
Palindrome/src/: Palindrome.java
PangramChecker/: PangramStringChecker.cs  Program.cs
PangramChecker.Tests/: PangramCheck.cs  PangramChecker.Tests.csproj
PangramChecker/Properties/: launchSettings.json
ProductApi/: ProductApi.csproj  Program.cs  README.md
ProductApi/Models/: ProductContext.cs  ProductDTO.cs
ProductApi/wwwroot/: index.html
Recruiting.SyrtsouD.Holidays/: Recruiting.SyrtsouD.Holidays.sln
Recruiting.SyrtsouD.Holidays/Recruiting.SyrtsouD.Holidays.API/: Startup.cs
Recruiting.SyrtsouD.Holidays/Recruiting.SyrtsouD.Holidays.Web/: index.html
aScharfe/ArabicRomanKata/: ArabicRomanKata.sln
aScharfe/ArabicRomanKata_Python/: README.md
aScharfe/ArabicRomanKata_Python_aScharfe/: ArabicRomanKata_Python.sln
awx/tasks/: build.gradle
katas/2022-04-27_Strange_Chessboard/solutions/StrangeChessboard_CarstenKuckuk_Cpp/: CMakeLists.txt  build.bat  readme.txt  schachbrett.cpp  schachbrett.hpp  schachbretttests.cpp  schachbretttool.cpp
katas/2022-04-27_Strange_Chessboard/solutions/StrangeChessboard_CarstenKuckuk_Cpp/libs/gtest-1.7.0/msvc/: gtest-md.vcxproj  gtest_main-md.vcxproj  gtest_prod_test-md.vcxproj  gtest_unittest-md.vcxproj
kickoff/: index.html  presi.md
(+1065 files in other folders)
